# spaces

./: .gitignore  Cargo.toml  README.md  install.sh
client/: Cargo.toml
client/src/: app.rs  auth.rs  cbf.rs  checker.rs  client.rs  config.rs  format.rs  lib.rs  rpc.rs  source.rs  spaces.rs  store.rs  sync.rs  wallets.rs
client/tests/: fetcher_tests.rs  integration_tests.rs  reorg_tests.rs
node/: Cargo.toml
node/src/: checker.rs  format.rs  lib.rs  node.rs  rpc.rs  source.rs  store.rs  sync.rs  wallets.rs
node/tests/: integration_tests.rs
protocol/: Cargo.toml
protocol/src/: constants.rs  hasher.rs  lib.rs  prepare.rs  script.rs  slabel.rs  validate.rs
testutil/: Cargo.toml  build.rs
testutil/src/: lib.rs  spaced.rs
veritas/: Cargo.toml  README.md  wasm.sh
veritas/example/: index.js  package-lock.json  package.json
veritas/src/: lib.rs  wasm.rs
wallet/: Cargo.toml
wallet/src/: address.rs  builder.rs  lib.rs  nostr.rs  rusqlite_impl.rs  tx_event.rs
